# mobile-apps-ai-ios-android

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LESSONS-LEARNED.md  Makefile  README.md  pyproject.toml
scripts/: clean.sh  release.sh  setup.sh
src/mobile_ai/: __init__.py  cli.py  core.py  models.py
tests/: __init__.py  conftest.py  test_core.py  test_models.py
