[build-system]
requires = ["hatchling>=1.21.0"]
build-backend = "hatchling.build"

[project]
name = "mobile-ai-apps"
version = "0.1.0"
description = "Ultra-modern mobile AI applications for iOS and Android"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Mobile AI Team", email = "team@mobile-ai.dev"},
]
keywords = [
    "mobile",
    "ai",
    "ios",
    "android",
    "computer-vision",
    "yolo",
    "deep-learning",
    "edge-ai",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "numpy>=1.24.0,<3.0.0",
    "pillow>=10.0.0,<13.0.0",
    "pydantic>=2.5.0,<3.0.0",
    "typer>=0.9.0,<1.0.0",
    "rich>=13.7.0,<15.0.0",
]

[project.optional-dependencies]
# Development dependencies
dev = [
    "hatch>=1.9.0",
    "pre-commit>=3.6.0",
    "ruff>=0.2.0",
    "black>=24.1.0",
    "mypy>=1.8.0",
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "pytest-xdist>=3.5.0",
    "coverage[toml]>=7.4.0",
    "ipython>=8.20.0",
    "ipdb>=0.13.13",
    "pip-audit>=2.6.0",  # Security auditing
]

# Documentation dependencies
docs = [
    "mkdocs>=1.5.3",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.24.0",
]

# Testing dependencies
test = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "pytest-xdist>=3.5.0",
    "pytest-mock>=3.12.0",
    "hypothesis>=6.98.0",
]

# ML/AI dependencies (optional - only install if needed)
ml = [
    "torch>=2.0.0,<3.0.0",
    "torchvision>=0.15.0,<1.0.0",
    "opencv-python>=4.8.0,<5.0.0",
    "ultralytics>=8.1.0",  # YOLOv8/v11
    "onnx>=1.15.0,<2.0.0",
    "onnxruntime>=1.17.0,<2.0.0",
]

# Mobile deployment (optional - for model conversion)
mobile = [
    "coremltools>=7.1,<8.0.0",
    "onnx>=1.15.0,<2.0.0",
    "onnxruntime>=1.17.0,<2.0.0",
    "onnx-simplifier>=0.4.35,<1.0.0",
]

# All dependencies
all = [
    "mobile-ai-apps[dev,docs,test,ml,mobile]",
]

[project.urls]
Homepage = "https://github.com/umitkacar/mobile-apps-ai-ios-android"
Documentation = "https://github.com/umitkacar/mobile-apps-ai-ios-android#readme"
Repository = "https://github.com/umitkacar/mobile-apps-ai-ios-android"
"Bug Tracker" = "https://github.com/umitkacar/mobile-apps-ai-ios-android/issues"

[project.scripts]
mobile-ai = "mobile_ai.cli:app"

# ==================== Hatch Configuration ====================
[tool.hatch.version]
path = "src/mobile_ai/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/mobile_ai"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/README.md",
    "/LICENSE",
]

[tool.hatch.envs.default]
dependencies = [
    "coverage[toml]>=7.4.0",
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
]

[tool.hatch.envs.default.scripts]
# Test commands
test = "pytest {args:tests}"
test-cov = "pytest --cov=src/mobile_ai --cov-report=term-missing --cov-report=html {args:tests}"
test-fast = "pytest -n auto {args:tests}"
test-verbose = "pytest -vv {args:tests}"

# Coverage commands
cov = "pytest --cov=src/mobile_ai --cov-report=term-missing"
cov-html = "pytest --cov=src/mobile_ai --cov-report=html && open htmlcov/index.html"
cov-report = "coverage report -m"
cov-clean = "coverage erase"

# Linting and formatting
lint = "ruff check src tests"
lint-fix = "ruff check --fix src tests"
format = "black src tests"
format-check = "black --check src tests"
type-check = "mypy src tests"

# Security
audit = "pip-audit"
audit-fix = "pip-audit --fix"

# Combined checks
check = [
    "lint",
    "format-check",
    "type-check",
    "test-cov",
]

# All checks including security
check-all = [
    "lint",
    "format-check",
    "type-check",
    "audit",
    "test-cov",
]

# Pre-commit
pre-commit-install = "pre-commit install"
pre-commit-run = "pre-commit run --all-files"

[tool.hatch.envs.docs]
dependencies = [
    "mkdocs>=1.5.3",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.24.0",
]

[tool.hatch.envs.docs.scripts]
build = "mkdocs build --clean --strict"
serve = "mkdocs serve --dev-addr localhost:8000"
deploy = "mkdocs gh-deploy --force"

# ==================== Ruff Configuration ====================
[tool.ruff]
target-version = "py39"
line-length = 100
indent-width = 4

src = ["src", "tests"]

# Exclude directories
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "*.egg-info",
]

[tool.ruff.lint]
# Enable pycodestyle (E, W), Pyflakes (F), isort (I), and more
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "ANN",    # flake8-annotations
    "ASYNC",  # flake8-async
    "S",      # flake8-bandit
    "BLE",    # flake8-blind-except
    "B",      # flake8-bugbear
    "A",      # flake8-builtins
    "COM",    # flake8-commas
    "C4",     # flake8-comprehensions
    "DTZ",    # flake8-datetimez
    "T10",    # flake8-debugger
    "EM",     # flake8-errmsg
    "EXE",    # flake8-executable
    "ISC",    # flake8-implicit-str-concat
    "ICN",    # flake8-import-conventions
    "G",      # flake8-logging-format
    "INP",    # flake8-no-pep420
    "PIE",    # flake8-pie
    "T20",    # flake8-print
    "PYI",    # flake8-pyi
    "PT",     # flake8-pytest-style
    "Q",      # flake8-quotes
    "RSE",    # flake8-raise
    "RET",    # flake8-return
    "SLF",    # flake8-self
    "SIM",    # flake8-simplify
    "TID",    # flake8-tidy-imports
    "TCH",    # flake8-type-checking
    "ARG",    # flake8-unused-arguments
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate
    "PD",     # pandas-vet
    "PGH",    # pygrep-hooks
    "PL",     # Pylint
    "TRY",    # tryceratops
    "FLY",    # flynt
    "NPY",    # NumPy-specific rules
    "PERF",   # Perflint
    "RUF",    # Ruff-specific rules
]

ignore = [
    "ANN101",  # Missing type annotation for self
    "ANN102",  # Missing type annotation for cls
    "ANN401",  # Dynamically typed expressions (Any)
    "S101",    # Use of assert
    "PLR0913", # Too many arguments
    "TRY003",  # Avoid specifying long messages outside exception class
    "COM812",  # Missing trailing comma (conflicts with formatter)
    "ISC001",  # Implicit string concatenation (conflicts with formatter)
]

# Allow fix for all enabled rules (when `--fix` is provided)
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",    # Use of assert
    "ANN",     # Type annotations
    "PLR2004", # Magic value used in comparison
    "ARG",     # Unused function argument
    "PT011",   # pytest.raises too broad
    "NPY002",  # numpy random legacy
]
"tests/conftest.py" = [
    "PLC0415", # Import not at top-level (fixtures need it)
]
"__init__.py" = [
    "F401",    # Unused import
]
"src/mobile_ai/cli.py" = [
    "B008",    # Typer requires function calls in defaults
    "ARG001",  # CLI examples have unused args
    "PLC0415", # Import inside function for version
    "TC003",   # Path needed at runtime for Typer
]
"src/mobile_ai/core.py" = [
    "ARG002",  # Dummy implementations have unused args
    "TC003",   # Path needed at runtime for Pydantic
]
"src/mobile_ai/models.py" = [
    "ARG002",  # Dummy implementations have unused args
]

[tool.ruff.lint.isort]
known-first-party = ["mobile_ai"]
force-single-line = false
lines-after-imports = 2

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# ==================== Black Configuration ====================
[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | node_modules
)/
'''

# ==================== MyPy Configuration ====================
[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
strict_optional = true
strict_equality = true
pretty = true
show_error_codes = true
show_column_numbers = true
show_error_context = true

# Exclude directories
exclude = [
    "build/",
    "dist/",
    ".venv/",
    "venv/",
    "node_modules/",
]

[[tool.mypy.overrides]]
module = [
    "torch.*",
    "torchvision.*",
    "cv2.*",
    "PIL.*",
    "ultralytics.*",
]
ignore_missing_imports = true

# ==================== Pytest Configuration ====================
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# Output options
addopts = [
    "-ra",                    # Show all test summary info
    "--strict-markers",       # Raise error on unknown markers
    "--strict-config",        # Raise error on config issues
    "--showlocals",           # Show local variables in tracebacks
    "--tb=short",            # Short traceback format
    "-v",                     # Verbose output
]

# Markers
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "gpu: marks tests that require GPU",
    "ios: marks tests specific to iOS",
    "android: marks tests specific to Android",
]

# Ignore warnings
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
]

# Test discovery
norecursedirs = [
    ".git",
    ".tox",
    "dist",
    "build",
    "*.egg",
    "node_modules",
    ".venv",
    "venv",
]

# ==================== Coverage Configuration ====================
[tool.coverage.run]
source = ["src"]
branch = true
parallel = true
omit = [
    "*/tests/*",
    "*/__init__.py",
    "*/site-packages/*",
    "*/.venv/*",
    "*/venv/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "def __str__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"

# ==================== Additional Tools ====================

# Bandit (security linting)
[tool.bandit]
exclude_dirs = ["tests", ".venv", "venv"]
skips = ["B101", "B601"]

# isort (import sorting) - mostly handled by ruff now
[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
